--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="results-header">
                 <div class="results-header-logout d-flex justify-content-between">
                     <p class="subtitle mb-0">Teams</p>
-                    <p class="text-right align-middle">Logout <i class="material-icons align-middle">exit_to_app</i></p>
+                    <p class="text-right align-middle"><a href="#">Logout <i class="material-icons align-middle">exit_to_app</i></a></p>
                 </div>
                 <h2 class="mt-1 align-middle">Overview</h2>
                 <div class="d-flex justify-content-between align-items-center">
