card choise changed

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="graph-card bg-white graph-team-marketing">
                             <div class="graph-card-header">
                                 <h3>Team Marketing</h3>
-                                <p class="choose"><span class="active"><a href="#">My teams</a></span> <span class="mx-1">|</span> <a href="#">All teams</a></p>
+                                <p class="choose"><span class="active"><a href="#">Team</a></span> <span class="mx-1">|</span> <a href="#">Team lead</a></p>
                             </div>
                             <div class="graph-card-body">
                                 <div class="bar">
@@ -142,7 +142,7 @@
                         <div class="graph-card bg-white graph-team-marketing">
                             <div class="graph-card-header">
                                 <h3>Team Sales</h3>
-                                <p class="choose"><span class="active"><a href="#">My teams</a></span> <span class="mx-1">|</span> <a href="#">All teams</a></p>
+                                <p class="choose"><span class="active"><a href="#">Team</a></span> <span class="mx-1">|</span> <a href="#">Team lead</a></p>
                             </div>
                             <div class="graph-card-body">
                                 <div class="bar">
@@ -188,7 +188,7 @@
                         <div class="graph-card bg-white graph-team-marketing">
                             <div class="graph-card-header">
                                 <h3>Team UX/UI</h3>
-                                <p class="choose"><span class="active"><a href="#">My teams</a></span> <span class="mx-1">|</span> <a href="#">All teams</a></p>
+                                <p class="choose"><span class="active"><a href="#">Team</a></span> <span class="mx-1">|</span> <a href="#">Team lead</a></p>
                             </div>
                             <div class="graph-card-body">
                                 <div class="bar">
@@ -234,7 +234,7 @@
                         <div class="graph-card bg-white graph-team-marketing">
                             <div class="graph-card-header">
                                 <h3>Team Sales</h3>
-                                <p class="choose"><span class="active"><a href="#">My teams</a></span> <span class="mx-1">|</span> <a href="#">All teams</a></p>
+                                <p class="choose"><span class="active"><a href="#">Team</a></span> <span class="mx-1">|</span> <a href="#">Team lead</a></p>
                             </div>
                             <div class="graph-card-body">
                                 <div class="bar">
@@ -280,7 +280,7 @@
                         <div class="graph-card bg-white graph-team-marketing">
                             <div class="graph-card-header">
                                 <h3>Team Management</h3>
-                                <p class="choose"><span class="active"><a href="#">My teams</a></span> <span class="mx-1">|</span> <a href="#">All teams</a></p>
+                                <p class="choose"><span class="active"><a href="#">Team</a></span> <span class="mx-1">|</span> <a href="#">Team lead</a></p>
                             </div>
                             <div class="graph-card-body">
                                 <div class="bar">
@@ -326,7 +326,7 @@
                         <div class="graph-card bg-white graph-team-marketing">
                             <div class="graph-card-header">
                                 <h3>Team Cleaning</h3>
-                                <p class="choose"><span class="active"><a href="#">My teams</a></span> <span class="mx-1">|</span> <a href="#">All teams</a></p>
+                                <p class="choose"><span class="active"><a href="#">Team</a></span> <span class="mx-1">|</span> <a href="#">Team lead</a></p>
                             </div>
                             <div class="graph-card-body">
                                 <div class="bar">
